Chỉnh sửa đường dẫn file

--- a/user/orders/orders.html
+++ b/user/orders/orders.html
@@ -63,7 +63,7 @@
 
         <h3 class="font-semibold mb-4 text-lg">Quét Mã QR Để Thanh Toán</h3>
 
-        <img src="../pay/qr.png"
+        <img src="../pay/file/qr.png"
              alt="QR Thanh Toán"
              style="max-width:300px;width:100%;margin:auto;">
 
